--- a/Docs/Laboratory/2021.09.09.md
+++ b/Docs/Laboratory/2021.09.09.md
@@ -1,1 +1,32 @@
+## Soccer Twos ([example in ml-agents](https://github.com/Unity-Technologies/ml-agents/blob/main/docs/Learning-Environment-Examples.md))
 
+- Set-up: Environment where four agents compete in a 2 vs 2 toy soccer game.
+- Goal:
+  - Get the ball into the opponent's goal while preventing the ball from
+    entering own goal.
+- Agents: The environment contains two different Multi Agent Groups with two agents in each.
+  Parameters : SoccerTwos.
+- Agent Reward Function (dependent):
+  - (1 - `accumulated time penalty`) When ball enters opponent's goal
+    `accumulated time penalty` is incremented by (1 / `MaxStep`) every fixed
+    update and is reset to 0 at the beginning of an episode.
+  - -1 When ball enters team's goal.
+- Behavior Parameters:
+  - Vector Observation space: 336 corresponding to 11 ray-casts forward
+    distributed over 120 degrees and 3 ray-casts backward distributed over 90
+    degrees each detecting 6 possible object types, along with the object's
+    distance. The forward ray-casts contribute 264 state dimensions and backward
+    72 state dimensions over three observation stacks.
+  - Actions: 3 discrete branched actions corresponding to
+    forward, backward, sideways movement, as well as rotation.
+  - Visual Observations: None
+- Float Properties: Two
+  - ball_scale: Specifies the scale of the ball in the 3 dimensions (equal
+    across the three dimensions)
+    - Default: 7.5
+    - Recommended minimum: 4
+    - Recommended maximum: 10
+  - gravity: Magnitude of the gravity
+    - Default: 9.81
+    - Recommended minimum: 6
+    - Recommended maximum: 20
