--- a/Docs/Laboratory/2021.09.19.md
+++ b/Docs/Laboratory/2021.09.19.md
@@ -1,1 +1,7 @@
-[게임 난이도](https://scienceon.kisti.re.kr/srch/selectPORSrchArticleList.do)
+F1 2021의 인공지능에 대해 조사해보려 한다.
+
+## [F1 2021 Realistic AI Difficulty For All Tracks](https://simracingsetup.com/f1-2021-game/f1-2021-realistic-ai-difficulty/)
+- 실제 F1 시합을 게임 속에 구현해보려 하는 시도로 이해된다.
+
+## [F1 2021 Game: How to get the right AI level every time](https://racinggames.gg/f1/f1-2021-game-how-to-get-the-right-ai-level-every-time-career-mode-my-team-difficulty/)
+- Player의 lab time을 AI score로 변환해 인공지능 난이도를 조정한다. 따라서 플레이어의 실력에 맞춰 게임 난이도가 달라진다.
