--- a/Docs/Laboratory/2021.09.15.md
+++ b/Docs/Laboratory/2021.09.15.md
@@ -1,1 +1,4 @@
-[NHN, 게임AI를 이용한 난이도 디자인](https://www.bloter.net/newsView/blt201911280013)
+기계학습을 게임 난이도 디자인에 적용시킨 사례를 탐색한다.
+## [NHN, 게임AI를 이용한 난이도 디자인](https://www.bloter.net/newsView/blt201911280013)
+- 게임 난이도를 평가하는 에이전트를 만든다.
+- 게임 난이도를 담당하는 에이전트(e.g.공격 몬스터 에이전트)를 만들진 않는다.
