--- a/Docs/Laboratory/2021.09.25.md
+++ b/Docs/Laboratory/2021.09.25.md
@@ -1,17 +1,19 @@
 '게임 난이도'를 키워드로 검색한 여러 논문들을 읽어보고 요약하려 한다.
 
-## [Difficulty Evaluation of Game Levels using A Path-Finding Algorithm](https://scienceon.kisti.re.kr/srch/selectPORSrchArticle.do?cn=JAKO201526650060988)
-- 게임 레벨의 근본을 길찾기 문제로 일반화하고 A* 알고리즘으로 게임 레벨의 탐색 난이도를 평가한다. 
-- 총 노드 이동 횟수가 많을 수록 게임 레벨이 어렵다고 판단한다.
+Reference
+---
+> [Difficulty Evaluation of Game Levels using A Path-Finding Algorithm](https://scienceon.kisti.re.kr/srch/selectPORSrchArticle.do?cn=JAKO201526650060988)
+> - 게임 레벨의 근본을 길찾기 문제로 일반화하고 A* 알고리즘으로 게임 레벨의 탐색 난이도를 평가한다. 
+> - 총 노드 이동 횟수가 많을 수록 게임 레벨이 어렵다고 판단한다.
 
-## [Difficulty Control of a Scrolling-Shooter Game Using Fuzzy Reasoning](https://scienceon.kisti.re.kr/srch/selectPORSrchArticle.do?cn=JAKO201728642463042)
-- 이분법적으로 표현하기 힘든 애매한 표현들(e.g. 비행기 곡예 패턴)을 퍼지 이론으로 처리하여 게임 난이도를 효과적으로 조정한다.
-- 플레이어의 실력에 맞춰 게임 난이도가 변화된다.
+> [Difficulty Control of a Scrolling-Shooter Game Using Fuzzy Reasoning](https://scienceon.kisti.re.kr/srch/selectPORSrchArticle.do?cn=JAKO201728642463042)
+> - 이분법적으로 표현하기 힘든 애매한 표현들(e.g. 비행기 곡예 패턴)을 퍼지 이론으로 처리하여 게임 난이도를 효과적으로 조정한다.
+> - 플레이어의 실력에 맞춰 게임 난이도가 변화된다.
 
-## [A Dynamic Difficulty Adjustment of Run Game Using Genetic Algorithm](https://scienceon.kisti.re.kr/srch/selectPORSrchArticle.do?cn=DIKO0014727896)
-- 게임 난이도에 지쳐 게임을 삭제하는 유저들을 위해 유전 알고리즘을 이용해 게임 난이도를 조절한다.
-- 플레이어의 행동 패턴에 맞게 게임 난이도를 자동으로 조정한다.
+> [A Dynamic Difficulty Adjustment of Run Game Using Genetic Algorithm](https://scienceon.kisti.re.kr/srch/selectPORSrchArticle.do?cn=DIKO0014727896)
+> - 게임 난이도에 지쳐 게임을 삭제하는 유저들을 위해 유전 알고리즘을 이용해 게임 난이도를 조절한다.
+> - 플레이어의 행동 패턴에 맞게 게임 난이도를 자동으로 조정한다.
 
-## [Measuring gameplay similarity between human and reinforcement learning artificial intelligence](https://scienceon.kisti.re.kr/srch/selectPORSrchArticle.do?cn=JAKO202007650437095)
-- 사람과 인공지능의 플레이 데이터를 코사인 유사도 방법으로 비교 분석해 사람과 유사한 인공지능 에이전트를 찾는다.
-- 본 논문에서 연구에 사용한 게임은 플러피 버드로 무척 단순한 게임이다. 복잡한 게임의 경우 추가 연구가 필요하다.
+> [Measuring gameplay similarity between human and reinforcement learning artificial intelligence](https://scienceon.kisti.re.kr/srch/selectPORSrchArticle.do?cn=JAKO202007650437095)
+>- 사람과 인공지능의 플레이 데이터를 코사인 유사도 방법으로 비교 분석해 사람과 유사한 인공지능 에이전트를 찾는다.
+>- 본 논문에서 연구에 사용한 게임은 플러피 버드로 무척 단순한 게임이다. 복잡한 게임의 경우 추가 연구가 필요하다.
