--- a/Docs/Laboratory/2021.09.19.md
+++ b/Docs/Laboratory/2021.09.19.md
@@ -1,16 +1,10 @@
 F1 2021의 인공지능에 대해 조사해보려 한다.
+# Reference
+> [F1 2021 Realistic AI Difficulty For All Tracks](https://simracingsetup.com/f1-2021-game/f1-2021-realistic-ai-difficulty/)
+>- 실제 F1 시합을 게임 속에 구현해보려 하는 시도로 이해된다.
 
-
----
-
-## [F1 2021 Realistic AI Difficulty For All Tracks](https://simracingsetup.com/f1-2021-game/f1-2021-realistic-ai-difficulty/)
-- 실제 F1 시합을 게임 속에 구현해보려 하는 시도로 이해된다.
-
-## [F1 2021 Game: How to get the right AI level every time](https://racinggames.gg/f1/f1-2021-game-how-to-get-the-right-ai-level-every-time-career-mode-my-team-difficulty/)
-- Player의 lab time을 AI score로 변환해 인공지능 난이도를 조정한다. 따라서 플레이어의 실력에 맞춰 게임 난이도가 달라진다.
-
-
- ---
- 
+> [F1 2021 Game: How to get the right AI level every time](https://racinggames.gg/f1/f1-2021-game-how-to-get-the-right-ai-level-every-time-career-mode-my-team-difficulty/)
+>- Player의 lab time을 AI score로 변환해 인공지능 난이도를 조정한다. 따라서 플레이어의 실력에 맞춰 게임 난이도가 달라진다.
+# Note 
 - F1 2021의 인공지능은 각자 목표 lab time을 가진다. F1 2021 인공지능의 목표는 딱 하나로 목표 lab time 안에 결승선을 통과하면 된다. 만약 F1 2021의 한 인공지능이 목표 lab time을 실제 선수의 베스트 lab time으로 설정했다고 생각해보자. 그러면 단순히 생각해서 인공지능은 선수처럼 주행하게 될 것이다.   
 - 이 구조는 내 프로젝트에 도움이 된다. 구조를 단순화시키면 AI - Component - Ability 가 된다. 예를 들어 AI가 F1 선수로 설정되면 Ability는 lab time이 된다. Component는 Ability를 수행하기 위한 요소들의 집합이다. 코너링, 주행 속도, 자동차 성능 등이 이에 해당한다.
