--- a/Docs/Laboratory/2021.09.15.md
+++ b/Docs/Laboratory/2021.09.15.md
@@ -1,5 +1,16 @@
-기계학습을 게임 난이도 디자인에 적용시킨 사례를 탐색한다.
+머신러닝 + 게임 + 난이도
 # Reference
 > [NHN, 게임AI를 이용한 난이도 디자인](https://www.bloter.net/newsView/blt201911280013)
 >- 게임 난이도를 평가하는 에이전트를 만든다.
 >- 플레이어와 직접 대적하는 에이전트를 만들진 않는다.
+
+> [게임이론과 머신러닝](https://audreyprincess.tistory.com/141)   
+> - Nash equilibrium
+> - 게임이론은 난이도 조율법과 거리는 멀지만 무척 흥미로운 주제다
+
+> [인공지능의 게임이론](https://reminder-by-kwan.tistory.com/79)
+> - 더 구체적이다
+
+> [AI 몬스터가 내 패턴 분석한다..게임업계 AI 도입 '열풍'](http://www.aitimes.com/news/articleView.html?idxno=134151)
+> - 리니지 광고...?
+> - 플레이어에 실력에 맞춰 능동적으로 난이도가 변경된다. 가장 흔한 게임 AI이다.
