--- a/Docs/Laboratory/2021.09.25.md
+++ b/Docs/Laboratory/2021.09.25.md
@@ -17,3 +17,15 @@ Reference
 > [Measuring gameplay similarity between human and reinforcement learning artificial intelligence](https://scienceon.kisti.re.kr/srch/selectPORSrchArticle.do?cn=JAKO202007650437095)
 >- 사람과 인공지능의 플레이 데이터를 코사인 유사도 방법으로 비교 분석해 사람과 유사한 인공지능 에이전트를 찾는다.
 >- 본 논문에서 연구에 사용한 게임은 플러피 버드로 무척 단순한 게임이다. 복잡한 게임의 경우 추가 연구가 필요하다.
+
+> [강화학습을 이용한 격투게임 인공지능 설계 및 구현](http://www.riss.kr/search/detail/DetailView.do?p_mat_type=be54d9b8bc7cdb09&control_no=82fe3c00bea205d9ffe0bdc3ef48d419&outLink=K)
+> - 이 분은 나와 같이 Unity와 MLAgents를 이용했다. 에이전트를 학습시키는 구체적인 이론들을 정리하고 정의하셨다.
+> - 아쉬운 것은 난이도 고려를 하지 않았다는 것 정도
+
+Note
+---
+게임 AI와 머신러닝의 결합은 대부분이 플레이어 실력에 맞춰 능동적으로 난이도가 변경되는 결과를 도출한다. 퍼지이론을 사용하든, 유전 알고리즘을 사용하든 말이다...물론 흥미롭고 혁신적인 주제들이다. 다만, 이번 프로젝트에서 내가 추구하는 것과는 살짝 거리가 있음을 느꼈다.   
+
+생각을 정리해봤다. 나는 특정 난이도에 수렴하는 에이전트를 머신러닝으로 학습시키고 싶은 것이지, 플레이어에 맞춰 난이도가 변경되는 에이전트를 원하지 않는다. 가장 쉽게 이해할 수 있는 예씨로 바둑이 있다. 바둑 1단의 실력을 합슥하는 에이전트를 만들고 싶다. 플레이어의 실력에 맞춰 적당한 수를 두는 에이전트가 아니라.   
+
+다만 연구 필요성과 실용성이 있는지는 잘 모르겠다.
