--- a/Docs/Laboratory/2021.09.25.md
+++ b/Docs/Laboratory/2021.09.25.md
@@ -26,6 +26,6 @@ Note
 ---
 게임 AI와 머신러닝의 결합은 대부분이 플레이어 실력에 맞춰 능동적으로 난이도가 변경되는 결과를 도출한다. 퍼지이론을 사용하든, 유전 알고리즘을 사용하든 말이다...물론 흥미롭고 혁신적인 주제들이다. 다만, 이번 프로젝트에서 내가 추구하는 것과는 살짝 거리가 있음을 느꼈다.   
 
-생각을 정리해봤다. 나는 특정 난이도에 수렴하는 에이전트를 머신러닝으로 학습시키고 싶은 것이지, 플레이어에 맞춰 난이도가 변경되는 에이전트를 원하지 않는다. 가장 쉽게 이해할 수 있는 예씨로 바둑이 있다. 바둑 1단의 실력을 합슥하는 에이전트를 만들고 싶다. 플레이어의 실력에 맞춰 적당한 수를 두는 에이전트가 아니라.   
+생각을 정리해봤다. 나는 특정 난이도에 수렴하는 에이전트를 머신러닝으로 학습시키고 싶은 것이지, 플레이어에 맞춰 난이도가 변경되는 에이전트를 원하지 않는다. 가장 쉽게 이해할 수 있는 예시로 바둑이 있다. 바둑 1단의 실력을 학습하는 에이전트를 만들고 싶다. 플레이어의 실력에 맞춰 적당한 수를 두는 에이전트가 아니라.   
 
-다만 연구 필요성과 실용성이 있는지는 잘 모르겠다.
+다만 연구 필요성과 실용성에 대해서 잘 정의할 필요가 있다.
