--- a/Docs/Laboratory/2021.09.25.md
+++ b/Docs/Laboratory/2021.09.25.md
@@ -22,6 +22,12 @@ Reference
 > - 이 분은 나와 같이 Unity와 MLAgents를 이용했다. 에이전트를 학습시키는 구체적인 이론들을 정리하고 정의하셨다.
 > - 아쉬운 것은 난이도 고려를 하지 않았다는 것 정도
 
+> [Study of Game Level Design Controled by Artificial Emotion](https://www.koreascience.or.kr/article/CFKO201129149563247.pdf)
+> - 
+
+> [딥러닝이 적용된 게임 밸런스](https://misterio.tistory.com/entry/%EB%94%A5%EB%9F%AC%EB%8B%9D%EC%9D%B4-%EC%A0%81%EC%9A%A9%EB%90%9C-%EA%B2%8C%EC%9E%84-%EB%B0%B8%EB%9F%B0%EC%8A%A4)
+> - 주목할 내용은 없다
+
 Note
 ---
 게임 AI와 머신러닝의 결합은 대부분이 플레이어 실력에 맞춰 능동적으로 난이도가 변경되는 결과를 도출한다. 퍼지이론을 사용하든, 유전 알고리즘을 사용하든 말이다...물론 흥미롭고 혁신적인 주제들이다. 다만, 이번 프로젝트에서 내가 추구하는 것과는 살짝 거리가 있음을 느꼈다.   
