--- a/Docs/Laboratory/2021.09.25.md
+++ b/Docs/Laboratory/2021.09.25.md
@@ -23,7 +23,7 @@ Reference
 > - 아쉬운 것은 난이도 고려를 하지 않았다는 것 정도
 
 > [Study of Game Level Design Controled by Artificial Emotion](https://www.koreascience.or.kr/article/CFKO201129149563247.pdf)
-> - 
+> - 낯설다
 
 > [딥러닝이 적용된 게임 밸런스](https://misterio.tistory.com/entry/%EB%94%A5%EB%9F%AC%EB%8B%9D%EC%9D%B4-%EC%A0%81%EC%9A%A9%EB%90%9C-%EA%B2%8C%EC%9E%84-%EB%B0%B8%EB%9F%B0%EC%8A%A4)
 > - 주목할 내용은 없다
