--- a/Docs/Laboratory/2021.09.15.md
+++ b/Docs/Laboratory/2021.09.15.md
@@ -14,3 +14,6 @@
 > [AI 몬스터가 내 패턴 분석한다..게임업계 AI 도입 '열풍'](http://www.aitimes.com/news/articleView.html?idxno=134151)
 > - 리니지 광고...?
 > - 플레이어에 실력에 맞춰 능동적으로 난이도가 변경된다. 가장 흔한 게임 AI이다.
+
+> [딥러닝이 적용된 게임 밸런스](https://misterio.tistory.com/entry/%EB%94%A5%EB%9F%AC%EB%8B%9D%EC%9D%B4-%EC%A0%81%EC%9A%A9%EB%90%9C-%EA%B2%8C%EC%9E%84-%EB%B0%B8%EB%9F%B0%EC%8A%A4)
+> - 주목할 내용은 없다
