--- a/Docs/Laboratory/2021.09.27.md
+++ b/Docs/Laboratory/2021.09.27.md
@@ -12,8 +12,6 @@ Result
 난이도가 높아질 수록 AI의 골드 수급량, 스펠 사용 정도, 움직임의 정교함이 달라진다.   
 
 롤의 게임 AI는 명시적으로 설계되어 단조롭다. 봇전을 통해서 게임 실력을 늘리는데는 명확한 한계가 존재한다. 그럼 만약에 봇전의 난이도를 아이언, 실버, 골드, 플래티넘, 다이아, 마스터,
-그랜드 마스터, 챌린저, 프로게이머로 나눌 수 있다면 어떨까? 봇전 난이도를 프로게이머로 설정하면 봇들이 프로게이머처럼 게임을 진행하게 되는 것이다. 
-
-프로게이머를 목표로 하는 플레이어는 봇전 난이도를 프로게이머로 설정해 연습을 진행할 수 있다. 단, 이 기술이 가능할 경우 사람 vs 사람 과 사람 vs AI 구조 사이의 경계갸 투명해지는 문제가 있다.
+그랜드 마스터, 챌린저, 프로게이머로 나눌 수 있다면 어떨까? 봇전 난이도를 프로게이머로 설정하면 봇들이 프로게이머처럼 게임을 진행하게 되는 것이다. 이렇게 된다면 프로게이머를 목표로 하는 플레이어는 봇전 난이도를 프로게이머로 설정해 연습을 진행할 수 있다. 단, 이 기술이 가능할 경우 사람 vs 사람 과 사람 vs AI 구조 사이의 경계갸 투명해지는 문제가 있다.
 
 기존 연구대로 롤 봇전을 재조정한다면 봇 AI들이 플레이어의 움직임에 맞춰서 행동할 뿐이다.
