--- a/Docs/Laboratory/2021.09.27.md
+++ b/Docs/Laboratory/2021.09.27.md
@@ -15,3 +15,9 @@ Result
 그랜드 마스터, 챌린저, 프로게이머로 나눌 수 있다면 어떨까? 봇전 난이도를 프로게이머로 설정하면 봇들이 프로게이머처럼 게임을 진행하게 되는 것이다. 이렇게 된다면 프로게이머를 목표로 하는 플레이어는 봇전 난이도를 프로게이머로 설정해 연습을 진행할 수 있다. 단, 이 기술이 가능할 경우 사람 vs 사람 과 사람 vs AI 구조 사이의 경계갸 투명해지는 문제가 있다.
 
 기존 연구대로 롤 봇전을 재조정한다면 봇 AI들이 플레이어의 움직임에 맞춰서 행동할 뿐이다.
+
+Core Reference
+---
+> [Measuring gameplay similarity between human and reinforcement learning artificial intelligence](https://scienceon.kisti.re.kr/srch/selectPORSrchArticle.do?cn=JAKO202007650437095)
+>- 사람과 인공지능의 플레이 데이터를 코사인 유사도 방법으로 비교 분석해 사람과 유사한 인공지능 에이전트를 찾는다.
+>- 본 논문에서 연구에 사용한 게임은 플러피 버드로 무척 단순한 게임이다. 복잡한 게임의 경우 추가 연구가 필요하다.
