--- a/Docs/Laboratory/2021.09.27.md
+++ b/Docs/Laboratory/2021.09.27.md
@@ -16,6 +16,8 @@ Result
 
 기존 연구대로 롤 봇전을 재조정한다면 봇 AI들이 플레이어의 움직임에 맞춰서 행동할 뿐이다.
 
+데이터 수집의 한계가 있으므로 먼저 나이별로 능력을 구분하는 에이전트를 만들어보고자 한다.
+
 Core Reference
 ---
 > [Measuring gameplay similarity between human and reinforcement learning artificial intelligence](https://scienceon.kisti.re.kr/srch/selectPORSrchArticle.do?cn=JAKO202007650437095)
