--- a/Docs/Laboratory/2021.09.27.md
+++ b/Docs/Laboratory/2021.09.27.md
@@ -23,3 +23,7 @@ Core Reference
 > [Measuring gameplay similarity between human and reinforcement learning artificial intelligence](https://scienceon.kisti.re.kr/srch/selectPORSrchArticle.do?cn=JAKO202007650437095)
 >- 사람과 인공지능의 플레이 데이터를 코사인 유사도 방법으로 비교 분석해 사람과 유사한 인공지능 에이전트를 찾는다.
 >- 본 논문에서 연구에 사용한 게임은 플러피 버드로 무척 단순한 게임이다. 복잡한 게임의 경우 추가 연구가 필요하다.
+
+
+> [F1 2021 Game: How to get the right AI level every time](https://racinggames.gg/f1/f1-2021-game-how-to-get-the-right-ai-level-every-time-career-mode-my-team-difficulty/)
+>- Player의 lab time을 AI score로 변환해 인공지능 난이도를 조정한다. 따라서 플레이어의 실력에 맞춰 게임 난이도가 달라진다.
