--- a/Docs/Laboratory/2021.09.27.md
+++ b/Docs/Laboratory/2021.09.27.md
@@ -27,3 +27,7 @@ Core Reference
 
 > [F1 2021 Game: How to get the right AI level every time](https://racinggames.gg/f1/f1-2021-game-how-to-get-the-right-ai-level-every-time-career-mode-my-team-difficulty/)
 >- Player의 lab time을 AI score로 변환해 인공지능 난이도를 조정한다. 따라서 플레이어의 실력에 맞춰 게임 난이도가 달라진다.
+
+> [강화학습을 이용한 격투게임 인공지능 설계 및 구현](http://www.riss.kr/search/detail/DetailView.do?p_mat_type=be54d9b8bc7cdb09&control_no=82fe3c00bea205d9ffe0bdc3ef48d419&outLink=K)
+> - 이 분은 나와 같이 Unity와 MLAgents를 이용했다. 에이전트를 학습시키는 구체적인 이론들을 정리하고 정의하셨다.
+> - 아쉬운 것은 난이도 고려를 하지 않았다는 것 정도
