--- a/Docs/Laboratory/2021.09.27.md
+++ b/Docs/Laboratory/2021.09.27.md
@@ -18,6 +18,13 @@ Result
 
 데이터 수집의 한계가 있으므로 먼저 나이별로 능력을 구분하는 에이전트를 만들어보고자 한다.
 
+Meeting
+---
+약 2주간의 자료조사는 유의미한 성과를 얻지 못했다. 나는 그저 재미를 추구했을 뿐이다. 하지만 연구는 완전히 다른 세계다. 나는 목표와 수단을 명확히 해야만 한다. 
+1. 현 게임들이 난이도를 채택하는 방법의 조사
+2. 게임 에이전트의 능력을 명확하게 구분짓는 방법
+3. 어디에 활용할 것인가?
+
 Core Reference
 ---
 > [Measuring gameplay similarity between human and reinforcement learning artificial intelligence](https://scienceon.kisti.re.kr/srch/selectPORSrchArticle.do?cn=JAKO202007650437095)
