--- a/Docs/Laboratory/2021.10.03.md
+++ b/Docs/Laboratory/2021.10.03.md
@@ -1,1 +1,1 @@
-[Sudoku](https://www.sudokuoftheday.com/about/difficulty/)
+[How do we rank the difficulty of Sudoku puzzles](https://www.sudokuoftheday.com/about/difficulty/)
