--- a/Docs/Laboratory/2021.10.03.md
+++ b/Docs/Laboratory/2021.10.03.md
@@ -1,1 +1,2 @@
 [How do we rank the difficulty of Sudoku puzzles](https://www.sudokuoftheday.com/about/difficulty/)
+[Computer Go](https://en.wikipedia.org/wiki/Computer_Go)
