--- a/Docs/Laboratory/2021.10.03.md
+++ b/Docs/Laboratory/2021.10.03.md
@@ -1,3 +1,4 @@
 [How do we rank the difficulty of Sudoku puzzles](https://www.sudokuoftheday.com/about/difficulty/)   
 [Computer Go](https://en.wikipedia.org/wiki/Computer_Go)   
-[Deep Dungeon: Exploring the Design of Dark Souls](https://www.gamedeveloper.com/design/deep-dungeon-exploring-the-design-of-i-dark-souls-i-)
+[Deep Dungeon: Exploring the Design of Dark Souls](https://www.gamedeveloper.com/design/deep-dungeon-exploring-the-design-of-i-dark-souls-i-)   
+[How to Become a Video Game Level Designer](https://www.masterclass.com/articles/how-to-become-a-video-game-level-designer)
