--- a/Docs/Laboratory/2021.10.03.md
+++ b/Docs/Laboratory/2021.10.03.md
@@ -3,3 +3,4 @@
 [Deep Dungeon: Exploring the Design of Dark Souls](https://www.gamedeveloper.com/design/deep-dungeon-exploring-the-design-of-i-dark-souls-i-)   
 [How to Become a Video Game Level Designer](https://www.masterclass.com/articles/how-to-become-a-video-game-level-designer)  
 [Computer Go Server](http://www.yss-aya.com/cgos/19x19/standings.html)
+[레이팅](https://m.blog.naver.com/msnayana/220848027555)
