--- a/Docs/Laboratory/2021.10.03.md
+++ b/Docs/Laboratory/2021.10.03.md
@@ -1,3 +1,5 @@
+How do we rank the difficulty
+---
 [How do we rank the difficulty of Sudoku puzzles](https://www.sudokuoftheday.com/about/difficulty/)   
 [Computer Go](https://en.wikipedia.org/wiki/Computer_Go)   
 [Deep Dungeon: Exploring the Design of Dark Souls](https://www.gamedeveloper.com/design/deep-dungeon-exploring-the-design-of-i-dark-souls-i-)   
