--- a/Docs/Laboratory/2021.10.04.md
+++ b/Docs/Laboratory/2021.10.04.md
@@ -1,6 +1,8 @@
 Week Result 
 ---
-- F1 2021은 AI score로 인공지능의 목표 LAB time을 정함
-- 스도쿠는 Difficulty score로 스테이지 난이도를 정함. Difficulty score를 측정하는 방법으로 순차적으로 성능이 좋은 알고리즘을 스테이지에 적용시켜 늦게 풀릴 수록 score를 높게 선정한다.
-- 바둑은 Rating으로 실력을 정함. 스테이지 난이도 설정법은 확실하진 않지만 Rating을 지표로 삼을 것으로 짐작됨.
-- 3명의 컴퓨터 에이전트에게 기본 점수 1000점씩 주고, 각 에이전트의 목표 점수를 500, 1700, 3000으로 설정하면 그에 맞는 실력을 학습할 것으로 기대된다.
+> ### 난이도 지표는 Score이다.
+> - F1 2021은 AI score로 인공지능의 목표 LAB time을 정함
+> - 스도쿠는 Difficulty score로 스테이지 난이도를 정함. Difficulty score를 측정하는 방법으로 순차적으로 성능이 좋은 알고리즘을 스테이지에 적용시켜 늦게 풀릴 수록 score를 높게 선정한다.
+> - 바둑은 Rating으로 실력을 정함. 스테이지 난이도 설정법은 확실하진 않지만 Rating을 지표로 삼을 것으로 짐작됨.
+
+ 대략적인 구성이 떠올랐다. 3명(실제론 몇 백은 있어햐 될 거라 짐작된다.)의 컴퓨터 에이전트에게 기본 점수 1000점씩 주고, 각 에이전트의 목표 점수를 500, 1700, 3000으로 설정하면 그에 맞는 실력을 학습할 것으로 기대된다. 예를 들어 500이 목표인 에이전트가 현재 1000점인 에이전트를 이기면 처벌을 받는 거다. 
