--- a/Docs/Laboratory/2021.10.04.md
+++ b/Docs/Laboratory/2021.10.04.md
@@ -6,3 +6,7 @@ Week Result
 > - 바둑은 Rating으로 실력을 정함. 스테이지 난이도 설정법은 확실하진 않지만 Rating을 지표로 삼을 것으로 짐작됨.
 
  대략적인 구성이 떠올랐다. 3명(실제론 몇 백은 있어햐 될 거라 짐작된다.)의 컴퓨터 에이전트에게 기본 점수 1000점씩 주고, 각 에이전트의 목표 점수를 500, 1700, 3000으로 설정하면 그에 맞는 실력을 학습할 것으로 기대된다. 예를 들어 500이 목표인 에이전트가 현재 1000점인 에이전트를 이기면 처벌을 받는 거다. 
+ 
+Note
+---
+스도쿠의 경우 정해진 풀이 알고리즘이 존재하지만 바둑의 경우엔 몬테카를로 방법을 이용해야 한다. 스도쿠 스테이지 난이도를 갱신하는 방법에 알고리즘을 이용할 수 있지만 바둑의 경우 그럴 수 없는 이유가 여기에 있다. 따라서 바둑의 경우 난이도 생성을 위해 강화학습을 사용하는 것이 타 게임에 비해 훨씬 효율적이다. 다만 Rating에 추가로 에이전트의 성격(자주 두는 수, 버릇 등)을 넣는 것은 과제로 남을 듯 하다. 만약 에이전트의 성격을 정의할 수 있다면 훨씬 풍부한 난이도  조정이 가능할 것이다.
